--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="Event Viewer"
+        android:label="@string/main_app"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="Event Viewer" >
+            android:label="@string/main_app" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +20,7 @@
         </activity>
         <activity
             android:name=".ActivityDescrEvent"
-            android:label="Description Event" >
+            android:label="@string/descr_activity" >
         </activity>
     </application>
 
